# pdf-parser-from-hell

./: .gitignore  README.md  parse_gurps.ipynb  pyproject.toml  test.ipynb
absolute_trash/app/: app.py
absolute_trash/app/dash_utils/: helpers.py  utils.py
app/: app.py  test.ipynb
app/dash_utils/: containers.py  helpers.py
app/models/: book_container.py  book_custom.py  book_general.py  gurps_general.py
app/parsers/: __init__.py  book_parser.py
app/utils/: containers.py  utils.py
models/: __init__.py  base.py  book_container.py  book_custom.py  book_general.py  gurps_container.py  gurps_custom.py  gurps_general.py
parser/: book_parser.py
parsers/: book_parser.py  common.py  list.py  utils.py
tests/: test_book.py  test_values.py
utils/: book_container.py  utils.py
