[tool.poetry]
name = "PDF Parser from Hell"
version = "0.0.1"
description = "A parser for PDFs from hell"
authors = ["Markus Pettersen <mp.markus94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
jinja2 = "^3.0.3"
Markdown = "^3.3.6"
pandas = "^1.5.0"
httpx = "^0.21.0"
pydantic = "^1.8.2"
dash = "^2.0.0"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mock = "^4.0.3"
jupyterlab = "^3.4.7"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"


[tool.black]
line-length = 90

[tool.coverage.run]
branch = true
source = [
    "models",
    "parser",
    "app"
]

[tool.coverage.report]

exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError"
]

ignore_errors = true
omit = [
    "tests/*",
]